WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13105
REGRESSION: an exception raised when calculating base value of a dot expression is not returned
https://bugs.webkit.org/show_bug.cgi?id=13105
Summary
REGRESSION: an exception raised when calculating base value of a dot expressi...
Alexey Proskuryakov
Reported
2007-03-18 01:16:19 PDT
If an exception is raised when calculating foo() in foo().bar(), it is ignored, which is a regression from shipping Safari. A type error is raised instead. Patch forthcoming.
Attachments
proposed fix
(4.26 KB, patch)
2007-03-18 01:19 PDT
,
Alexey Proskuryakov
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-03-18 01:19:15 PDT
Created
attachment 13687
[details]
proposed fix
Geoffrey Garen
Comment 2
2007-03-18 10:45:00 PDT
Comment on
attachment 13687
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2007-03-18 10:54:28 PDT
Committed revision 20291.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug