        Reviewed by Geoff.

http://bugs.webkit.org/show_bug.cgi?id=13105
        REGRESSION: an exception raised when calculating base value of a dot expression is not returned

        Test: fast/js/dot-node-base-exception.html

        * kjs/nodes.cpp:
        (FunctionCallDotNode::evaluate): Added the necessary KJS_CHECKEXCEPTIONVALUE.



git-svn-id: svn://svn.chromium.org/blink/trunk@20291 bbb929c8-8fbe-4397-9dbb-9b2b20218538