third_party/WebKit/LayoutTests/fast/js/resources/dot-node-base-exception.js
@@ -1,0 +1,9 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description(
+"This test checks that a correct exception is raised when calculating the base value of a dot expression fails."
+);
+
+// Should be a DOM exception, not just some "TypeError: Null value".
+shouldThrow('(document.appendChild()).foobar()', '"Error: NOT_FOUND_ERR: DOM Exception 8"');
+
+var successfullyParsed = true;
